kind_cluster/k8s/templates/Gateway/api-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: saleor-api
  namespace: saleor1
spec:
  parentRefs:
    - name: saleor-gateway
  hostnames:
    - api.saleor.local
  rules:
    - matches:
       - path:
           type: PathPrefix
           value: /graphql/
      backendRefs:
        - name: api-service
          port: 8000
