kind_cluster/k8s/templates/Gateway/dashboard-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: saleor-dashboard
  namespace: saleor1
spec:
  parentRefs:
    - name: saleor-gateway
  hostnames:
    - dashboard-saleor.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: saleor-dashboard

          port: 80


# after doing that -> the api will redirect the traffic to this service on this host (dashboard-saleor.local)
#
